Fix upside-down view overlapping buttons.

--- a/pinout.css
+++ b/pinout.css
@@ -67,6 +67,7 @@ table {
     align-items: left;
     position: relative;
     top: 66px;
+    height: fit-content;
 }
 .labels.left {
     direction: rtl;
@@ -74,6 +75,7 @@ table {
     align-items: right;
     position: relative;
     top: 66px;
+    height: fit-content;
 }
 .labels tr {
     counter-increment: pin;
@@ -282,10 +284,10 @@ td, th {
 }
 .australian-view .labels.left {
     direction: ltr;
-    top: -66px;
+    top: 132px;
 }
 .australian-view .labels.right {
-    top: -66px;
+    top: 132px;
 }
 .australian-view .labels.left td {border-width:0 4px 0 0;}
 .australian-view .labels.right td {border-width:0 0 0 4px;}
